--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "d3-geo": "^3.1.1",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
+    "express": "^4.22.1",
+    "multer": "^1.4.5-lts.1",
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
